강사목록 상세보기 구현(미완료), 강의 등록, 강의 수정 css 수정

--- a/Hobee/src/main/webapp/resources/css/admin/adminClassEditinfo.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminClassEditinfo.css
@@ -152,11 +152,12 @@ body {
 .btn-wrapper {
     display: flex;
     justify-content: center;
-    gap: 12px;
-    margin-top: 30px;
+    align-items: center;
+    gap: 8px;
+/*     margin-top: 30px; */
 }
 
-/* =========================== 버튼 스타일 =========================== */
+
 /* =========================== 버튼 스타일 =========================== */
 .btn {
     background-color: #a7a7a7;
@@ -169,8 +170,8 @@ body {
     box-shadow: 0 3px 8px rgba(37, 115, 255, 0.2);
     transition: all 0.2s;
     font-weight: 600;
-    display: block; /* ✅ inline-block에서 block으로 변경 */
-    margin: 30px auto 0; /* ✅ margin을 auto로 변경하여 중앙 정렬 */
+    display: inline-block;
+/*     margin: 0;    */
 }
 
 .btn:last-child {
@@ -497,9 +498,9 @@ body {
     font-weight: 600;
     transition: all 0.2s;
     width: auto;
-    margin-top: 0;
+/*     margin-top: 0; */
     display: block;
-    margin-left: auto;
+/*     margin-left: auto; */
 }
 
 .btn-add:hover {
@@ -681,5 +682,4 @@ body {
     outline: none;
     border-color: #007bff;
 }
-
 
