--- a/Hobee/src/main/webapp/resources/css/main/main.css
+++ b/Hobee/src/main/webapp/resources/css/main/main.css
@@ -250,7 +250,7 @@ footer {
 	padding: 20px;
 	font-size: 0.9rem;
 	color: #777;
-	box-shadow: 0 -2px 6px rgba(0,0,0,0.05);
+/* 	box-shadow: 0 -2px 6px rgba(0,0,0,0.05); */
 }
 /* 메인페이지 카테고리 */
 .hobee-category {
