강사 강의 등록 구현중 ++

--- a/Hobee/src/main/webapp/resources/css/member/teacherMyPage.css
+++ b/Hobee/src/main/webapp/resources/css/member/teacherMyPage.css
@@ -25,6 +25,9 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
 /* =========================== 컨텐츠 래퍼 =========================== */
 .content-wrapper {
     max-width: 1200px;
